# sentinel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: KAGGLE_WRITEUP.md  VIDEO_SCRIPT.md
src/sentinel/: cli.py  config.py  orchestrator.py  report.py
src/sentinel/agents/: audit_agent.py  remediation_agent.py  reporting_agent.py  risk_agent.py
src/sentinel/mcp_server/: server.py
src/sentinel/mcp_server/tools/: dns.py  firewall.py  packages.py  ports.py  selinux.py  usbguard.py
src/sentinel/security/: allowlist.py  audit_log.py
tests/: test_allowlist.py  test_tools.py
