[project]
name = "sentinel"
version = "0.1.0"
description = "Agentic Linux security audit and hardening assistant"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.3.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
